<resources>
    <string name="app_name">MoodSwing_0.0.0</string>
    <string name="title_activity_maps">Map</string>
    <string name="main_welcome_text">Welcome (USERNAME and ID)!</string>
    <string name="login_welcome_text">Welcome to MoodSwing! Please login below.</string>
    <string name="login">login</string>
    <string name="signup">Sign Up</string>
    <string name="post">Post</string>
    <string name="upload">Upload</string>
    <string name="login_hint">username</string>
    <string name="moodswing">MoodSwing</string>
    <string name="followers_following"><![CDATA[Followers & Following]]></string>
    <string name="home">Home</string>
    <string name="new_mood_event">New Mood Event</string>
    <string name="mood_history">View Mood History</string>
    <string name="mood_statistics">View Mood Statistics</string>
    <string name="entry_required">Entry is required!</string>
    <string name="trigger_invalid">Trigger length too long. Must be under 3 words and 20 chars."</string>
    <string name="app_title">MoodSwing</string>

    <!-- New Mood Event Strings -->
    <string name="emotionalstate">Emotional State:</string>
    <string name="socialsituation">Social Situation:</string>
    <string name="triggers">Triggers:</string>
    <string name="photo">Photo:</string>
    <string name="trigger_max_message">(max. 20 chars. or 3 words.)</string>
    <string name="photo_max_message">(max. size 65536 bytes)</string>
    <string name="addlocation">Add Current Location</string>

    <!-- for spinners -->
    <string-array name="emotionalState_array">
        <item></item>
        <item>Anger</item>
        <item>Confusion</item>
        <item>Disgust</item>
        <item>Fear</item>
        <item>Happiness</item>
        <item>Sadness</item>
        <item>Shame</item>
        <item>Surprise</item>
    </string-array>

    <string name="mood_prompt">Choose your emotional state</string>

    <string-array name="socialSituation_array">
        <item></item>
        <item>Alone</item>
        <item>With One Other Person</item>
        <item>With Two To Several People</item>
        <item>With A Crowd</item>
    </string-array>


    <string name="socialSituation_prompt">Choose your social situation</string>
    <string name="edit">Edit</string>
    <string name="capture">Take Photo</string>
    <string name="title_activity_main_follow">Following and Followers</string>
    <string name="moodhistorytitle">Mood Event History</string>
    <string name="moodfeedtitle">Mood Event Feed</string>

    <string name="block_user">Blocked Users</string>
    <string name="block_user_welcome_text">Block User Welcome Text</string>
    <string name="title_activity_block_user">Blocked Users</string>
    <string name="not_blocking_text">You are currently not blocking any users.</string>
    <string name="no_followers_text">You currently have no followers!</string>
    <string name="no_follow_requests_text">You currently have no one requesting to follow you.</string>
    <string name="you_were_feeling">You were feeling</string>

    <string name="recentFilter">Recent Week</string>
    <string name="emotionFilter">By Emotion</string>
    <string name="triggerFilter">By Trigger</string>
    <string name="number_of_followers">Number of Followers:</string>
    <string name="most_used">Most Used:</string>
    <string name="number_of_following">Number of Following:</string>
    <string name="_0">0</string>
    <string name="emotion_usage_graph"> Emotion Usage Graph</string>


</resources>
