<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundPink">


    <android.support.v7.widget.Toolbar
        android:id="@+id/mainToolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/AppTheme"
        app:popupTheme="@style/AppTheme"
        app:titleTextColor="@color/white">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/moodswing"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </android.support.v7.widget.Toolbar>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0.3dp" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/filterToolbar_MoodFeed"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:titleTextColor="@color/white">

        <TextView
            android:id="@+id/filterTitleMoodFeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/moodfeedtitle"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/mainWelcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/mainToolBar"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="16dp"
        android:text="@string/main_welcome_text" />

    <ListView
        android:id="@+id/MoodFeedListView"
        android:layout_width="match_parent"
        android:layout_height="285dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:nestedScrollingEnabled="true"
        />

    <TextView
        android:id="@+id/emptyMoodFeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="Your MoodFeed is empty."
        android:textAlignment="center"
        android:textSize="18sp"
        android:visibility="gone" />
</LinearLayout>